update toggle visibility bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -155,4 +155,12 @@
     font-size: var(--text-xs);
     line-height: var(--leading-text);
   }
+
+  input[type='password']::-ms-reveal,
+  input[type='password']::-ms-clear {
+    display: none;
+  }
+  input[type='password']::-webkit-textfield-decoration-container {
+    display: none;
+  }
 }
